--- a/index.html
+++ b/index.html
@@ -307,7 +307,7 @@
               </div>
               <img src="assets/img/about1.jpg" alt="" class="img-radius radius-0-md">
           </div>
-          <div class="about-inner two-cols mt-48 align-items-center">
+          <div class="about-inner two-cols mt-48 align-items-center column-reverse-md">
               <img src="assets/img/about2.jpg" alt="" class="img-radius radius-0-md">
               <div class="about-inner__txt flex-shrink-0 padding-16-md">
                  <p class="gray-text txt-size">В каждой секции есть бесшумный грузопассажирский лифт со сквозной кабиной, чем создаст дополнительный комфорт маме с коляской. Просторная входная группа с широкими лестничными пролётами с панорамным остеклением, на каждом этаже есть колясочные. В шаговой близости расположена школа, детский сад, больница, продуктовые магазины, супермаркет, несколько кафе и мини маркет в самом доме, так же в цокольном этаже расположена коммерческая недвижимость.</p>
