--- a/index.html
+++ b/index.html
@@ -49,17 +49,17 @@
                         <a href="tel:+79876543210" class="phone-item">+7 987 654 32 10</a>
 
                         <div class="contacts-items">
-                            <a class="contacts-item" href="#"><img src="assets/img/address.svg"
-                                    alt="иконка адреса"> Ялта, пос. Гурзуф,
-                                ул. 60 лет СССР</a>
-                            <a class="contacts-item" href="#"><img src="assets/img/mail.svg" alt="иконка почты">
-                                info@prichal82.ru</a>
+                          <a class="contacts-item" href="#" target="_blank" rel="noopener noreferrer"><img src="assets/img/address.svg"
+                            alt="иконка адреса"> Ялта, пос. Гурзуф,
+                        ул. 60 лет СССР</a>
+                    <a class="contacts-item" href="mailto:info@prichal82.ru"><img src="assets/img/mail.svg" alt="иконка почты">
+                        info@prichal82.ru</a>
 
                         </div>
                         <p>или пишите нам в мессенджерах</p>
                         <div class="socials-items">
-                            <a href="#"><img src="assets/img/whatsapp.svg" alt="иконка ватсапа"></a>
-                            <a href="#"><img src="assets/img/telegram.svg" alt="иконка телеграм"></a>
+                            <a href="#" target="_blank" rel="noopener noreferrer"><img src="assets/img/whatsapp.svg" alt="иконка ватсапа"></a>
+                            <a href="#" target="_blank" rel="noopener noreferrer"><img src="assets/img/telegram.svg" alt="иконка телеграм"></a>
                         </div>
                     </div>
                 </div>
@@ -407,17 +407,17 @@
           <a href="tel:+79876543210" class="phone-item">+7 987 654 32 10</a>
 
           <div class="contacts-items">
-              <a class="contacts-item" href="#"><img src="assets/img/address.svg"
+              <a class="contacts-item" href="#" target="_blank" rel="noopener noreferrer"><img src="assets/img/address.svg"
                       alt="иконка адреса"> Ялта, пос. Гурзуф,
                   ул. 60 лет СССР</a>
-              <a class="contacts-item" href="#"><img src="assets/img/mail.svg" alt="иконка почты">
+              <a class="contacts-item" href="mailto:info@prichal82.ru"><img src="assets/img/mail.svg" alt="иконка почты">
                   info@prichal82.ru</a>
 
           </div>
           <p>или пишите нам в мессенджерах</p>
           <div class="socials-items">
-              <a href="#"><img src="assets/img/whatsapp.svg" alt="иконка ватсапа"></a>
-              <a href="#"><img src="assets/img/telegram.svg" alt="иконка телеграм"></a>
+              <a href="#" target="_blank" rel="noopener noreferrer"><img src="assets/img/whatsapp.svg" alt="иконка ватсапа"></a>
+              <a href="#" target="_blank" rel="noopener noreferrer"><img src="assets/img/telegram.svg" alt="иконка телеграм"></a>
           </div>
       </div>
       </div>
@@ -428,7 +428,7 @@
         Агентство недвижимости «Причал 82» в Ялте
       </p>
       <p class="created-txt">
-        Разработано в <a href="web-space.pro">web-space.pro</a>
+        Разработано в <a href="web-space.pro" target="_blank" rel="noopener noreferrer">web-space.pro</a>
       </p>
     </div>
     <p class="info-txt">Обращаем ваше внимание на то, что данный интернет-сайт носит исключительно информационный характер и ни при каких условиях не является публичной офертой, определяемой положениями Статьи 437(2) гражданского кодекса Российской Федерации. Для получения подробной информации о наличии и стоимости указанных (или) услуг, пожалуйста, обращайтесь к одному из наших менеджеров.</p>
